@@ -178,7 +178,7 @@ IF(NOT DEFINED _MANAGE_FILE_CMAKE_)
 	ENDIF("${fileType}" STREQUAL "SYSCONF_NO_REPLACE")
     ENDMACRO(MANAGE_FILE_INSTALL fileType)
 
-    FUNCTION(FIND_FILE_ERROR_HANDLING VAR)
+    MACRO(FIND_ERROR_HANDLING TYPE VAR)
 	SET(_verboseLevel ${M_ERROR})
 	SET(_errorMsg "")
 	SET(_errorVar "")
@@ -194,7 +194,7 @@ IF(NOT DEFINED _MANAGE_FILE_CMAKE_)
 	    ELSEIF(_state STREQUAL "VERBOSE_LEVEL")
 		SET(_verboseLevel "${_arg}")
 		SET(_state "")
-	    ELSEIF(_state STREQUAL "FIND_FILE_ARGS")
+	    ELSEIF(_state STREQUAL "FIND_ARGS")
 		LIST(APPEND _findFileArgList "${_arg}")
 	    ELSE(_state STREQUAL "ERROR_MSG")
 		IF(_arg STREQUAL "ERROR_MSG")
@@ -204,60 +204,32 @@ IF(NOT DEFINED _MANAGE_FILE_CMAKE_)
 		ELSEIF(_arg STREQUAL "VERBOSE_LEVEL")
 		    SET(_state "${_arg}")
 		ELSE(_arg STREQUAL "ERROR_MSG")
-		    SET(_state "FIND_FILE_ARGS")
+		    SET(_state "FIND_ARGS")
 		    LIST(APPEND _findFileArgList "${_arg}")
 		ENDIF(_arg STREQUAL "ERROR_MSG")
 	    ENDIF(_state STREQUAL "ERROR_MSG")
 	ENDFOREACH(_arg ${ARGN})
-
-	FIND_FILE(${VAR} ${_findFileArgList})
+	IF("${TYPE}" STREQUAL "PROGRAM")
+	    FIND_PROGRAM(${VAR} ${_findFileArgList})
+	    SET(_type "Program")
+	ELSE("${TYPE}" STREQUAL "PROGRAM")
+	    FIND_FILE(${VAR} ${_findFileArgList})
+	    SET(_type "File")
+	ENDIF("${TYPE}" STREQUAL "PROGRAM")
 	IF(${VAR} STREQUAL "${VAR}-NOTFOUND")
-	    M_MSG(${_verboseLevel} "File ${_findFileArgList} is not found!${_errorMsg}")
+	    M_MSG(${_verboseLevel} "${_type} ${_findFileArgList} is not found!${_errorMsg}")
 	    IF (NOT _errorVar STREQUAL "")
 		SET(${_errorVar} 1)
 	    ENDIF(NOT _errorVar STREQUAL "")
 	ENDIF(${VAR} STREQUAL "${VAR}-NOTFOUND")
+    ENDMACRO(FIND_ERROR_HANDLING TYPE VAR)
+
+    FUNCTION(FIND_FILE_ERROR_HANDLING VAR)
+	FIND_ERROR_HANDLING(FILE ${VAR} ${ARGN})
     ENDFUNCTION(FIND_FILE_ERROR_HANDLING VAR)
 
     FUNCTION(FIND_PROGRAM_ERROR_HANDLING VAR)
-	SET(_verboseLevel ${M_ERROR})
-	SET(_errorMsg "")
-	SET(_errorVar "")
-	SET(_findProgramArgList "")
-	SET(_state "")
-	FOREACH(_arg ${ARGN})
-	    IF(_state STREQUAL "ERROR_MSG")
-		SET(_errorMsg "${_arg}")
-		SET(_state "")
-	    ELSEIF(_state STREQUAL "ERROR_VAR")
-		SET(_errorVar "${_arg}")
-		SET(_state "")
-	    ELSEIF(_state STREQUAL "VERBOSE_LEVEL")
-		SET(_verboseLevel "${_arg}")
-		SET(_state "")
-	    ELSEIF(_state STREQUAL "FIND_PROGRAM_ARGS")
-		LIST(APPEND _findProgramArgList "${_arg}")
-	    ELSE(_state STREQUAL "ERROR_MSG")
-		IF(_arg STREQUAL "ERROR_MSG")
-		    SET(_state "${_arg}")
-		ELSEIF(_arg STREQUAL "ERROR_VAR")
-		    SET(_state "${_arg}")
-		ELSEIF(_arg STREQUAL "VERBOSE_LEVEL")
-		    SET(_state "${_arg}")
-		ELSE(_arg STREQUAL "ERROR_MSG")
-		    SET(_state "FIND_PROGRAM_ARGS")
-		    LIST(APPEND _findProgramArgList "${_arg}")
-		ENDIF(_arg STREQUAL "ERROR_MSG")
-	    ENDIF(_state STREQUAL "ERROR_MSG")
-	ENDFOREACH(_arg ${ARGN})
-
-	FIND_PROGRAM(${VAR} ${_findProgramArgList})
-	IF(${VAR} STREQUAL "${VAR}-NOTFOUND")
-	    M_MSG(${_verboseLevel} "Program ${_findProgramArgList} is not found!${_errorMsg}")
-	    IF (NOT _errorVar STREQUAL "")
-		SET(${_errorVar} 1)
-	    ENDIF(NOT _errorVar STREQUAL "")
-	ENDIF(${VAR} STREQUAL "${VAR}-NOTFOUND")
+	FIND_ERROR_HANDLING(PROGRAM ${VAR} ${ARGN})
     ENDFUNCTION(FIND_PROGRAM_ERROR_HANDLING VAR)
 
     MACRO(GIT_GLOB_TO_CMAKE_REGEX var glob)
