@@ -119,7 +119,7 @@ function get_epel_branches(){
 }
 
 if [ -r /etc/cmake-fedora.conf ];then
-    source $f
+    source /etc/cmake-fedora.conf
 else
     for d in $PWD $PWD/cmake-fedora; do
 	if [ -r $d/cmake-fedora.conf.in ];then
