@@ -1,4 +1,8 @@
-* Thu Jan 30 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.6
+* Sat Feb 01 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.7
+- Changed:
+  + cmake-fedora.conf.in will also be searched if cmake-fedora.conf does not exist.
+
+* Fri Jan 31 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.6
 - Resolves Bug 1058631 - ManagePRM generate Broken %defattr
 - Enhancement:
   + ManageTarget: ADD_CUSTOM_TARGET_COMMAND: NO_FORCE: new option.
